# DigestAnything

./: .gitignore  CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml
backend/: cards.py  chat.py  context.py  ingest.py  main.py  orchestrator.py  podcast.py  quiz.py  tutor.py  visual.py
decks/digest/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-outline.md  viewer.html
docs/: AGENT-GUIDE.md
docs/gemini/: DIGEST-SPEC.md  VERIFIED-API.md  document-processing.md  prompting-strategies.md  speech-generation-tts.md  text-generation.md
docs/stitch/: DESIGN.md  code.html
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FlashCards.tsx  FloatingChat.tsx  LoadingState.tsx  MindMap.tsx  Overview.tsx  PodcastPlayer.tsx  QuizMode.tsx  SourceInput.tsx  TabBar.tsx  TutorTab.tsx
tests/: run_all.py  test_00_setup.py  test_01_flash_text.py  test_02_pro_text.py  test_03_pdf_upload.py  test_04_tts_single.py  test_05_tts_multi.py  test_06_youtube.py  test_07_web_content.py  test_08_video_understanding.py  test_09_full_pipeline.py  test_10_all_prompts.py  test_11_tts_chunked_podcast.py  verify_audio.py  verify_e2e.py  verify_round1.py  verify_round2.py  verify_round3.py  verify_round4.py
tests/agents/: README.md  config.py  e2e_agent.py  fixer.py  loop.py  test_runner.py
tests/samples/: markmap_output.md  pipeline_cards.json  pipeline_context.json  pipeline_quiz.json  prompt_audit.json  prompt_context.json  (+2 more)
(+9 files in other folders)
