[project]
name = "ralphthon-seoul-submission"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-genai>=1.69.0",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
]
