[project]
name = "ralphthon-seoul-submission"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.52",
    "fastapi>=0.135.2",
    "google-genai>=1.69.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pypdf>=6.9.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
]
